# scolorpicker

./: .clangd  .editorconfig  .gitattributes  .gitignore  AppState.hpp  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  Utils.cpp  alternate_icons.txt  compile_commands.json  icon_surface.txt  main.cpp  surface_stbi_creation.txt
cmake/: check_options.cmake  config.hpp.in  localize.cmake  setup_screen_capture_lite.cmake  setup_sdbus.cmake  setup_sdl.cmake  version.hpp.in
data/desktop/: scolorpicker.desktop
data/messages/en/: help.txt  unknown_format.txt  unknown_output.txt  unknown_parameter.txt
data/messages/en/AppState/: alternate_cursors.txt  alternate_icons.txt  cursor_creation.txt  cursor_surface.txt  icon_surface.txt  set_cursor.txt  window_icon.txt
data/messages/en/CLI/: help.txt  unknown_language.txt
data/messages/en/Color/: copied_to_clipboard.txt  failed_to_retrieve.txt  not_in_clipboard.txt
data/messages/en/Screenshooter/: failed_to_determine_platform.txt  surface_creation.txt  texture_creation.txt
data/messages/en/Screenshooter/Screenshooter_Wayland/: screenshot_failure.txt
data/messages/en/Screenshooter/Screenshooter_X11/: root_window.txt  root_window_attributes.txt  screenshot_failure.txt  visual_type.txt  x_connection_init.txt
data/messages/en/Utils/: message_not_loaded.txt  surface_stbi_creation.txt
data/messages/en/main/: renderer_creation.txt  sdl_init.txt  window_creation.txt  window_renderer_creation.txt
data/messages/pl/: help.txt  message_not_loaded.txt  unknown_format.txt  unknown_output.txt  unknown_parameter.txt
data/messages/pl/AppState/: alternate_cursors.txt  cursor_creation.txt  cursor_surface.txt  set_cursor.txt  window_icon.txt
data/messages/pl/CLI/: help.txt  unknown_language.txt
data/messages/pl/Color/: copied_to_clipboard.txt  failed_to_retrieve.txt  not_in_clipboard.txt
data/messages/pl/Screenshooter/: failed_to_determine_platform.txt  surface_creation.txt  texture_creation.txt
data/messages/pl/Screenshooter/Screenshooter_Wayland/: screenshot_failure.txt
data/messages/pl/Screenshooter/Screenshooter_X11/: root_window.txt  root_window_attributes.txt  screenshot_failure.txt  visual_type.txt  x_connection_init.txt
data/messages/pl/main/: renderer_creation.txt  sdl_init.txt  window_creation.txt  window_renderer_creation.txt
doc/: scolorpicker.1
docs/: scolorpicker.1
docs/man/en/: scolorpicker.1
docs/man/man1/: scolorpicker.1
docs/man/pl/: scolorpicker.1
include/CMake/: CMake_Config.h
include/SCP/: SCP.h  SCP_CLI.h  SCP_CLI.hpp  SCP_Clipboard.h  SCP_Mouse.hpp  SCP_Pixel.hpp  SCP_Utils.hpp  SCP_Window.hpp  metadata.hpp
input/: CMake_Config.h.in  metadata.hpp.in
src/: AppState.hpp  SCP.c  SCP_CLI.c  SCP_CLI.cpp  SCP_CLI.hpp  SCP_Clipboard.c  SCP_Main.c  SCP_Mouse.cpp  SCP_Pixel.cpp  SCP_Utils.cpp  SCP_Utils.hpp  SCP_Window.cpp  config.hpp  main.c  main.cpp  version.hpp
src/CLI/: CLI.cpp  CLI.hpp  SCP_CLI.cpp  SCP_CLI.hpp
src/Color/: Color.cpp  Color.hpp
src/Screenshooter/: Screenshooter.cpp  Screenshooter.hpp
src/Screenshooter/Implementations/Wayland/: Screenshooter_Wayland.cpp  Screenshooter_Wayland.hpp
src/Screenshooter/Implementations/X11/: Screenshooter_X11.cpp  Screenshooter_X11.hpp
src/Screenshot/: Screenshot.cpp  Screenshot.hpp
src/Screenshot/Implementations/Wayland/: Screenshot_Wayland.cpp  Screenshot_Wayland.hpp
src/Screenshot/Implementations/X11/: Screenshot_X11.cpp  Screenshot_X11.hpp
src/UI/: UI.cpp  UI.hpp
src/Utils/: SCP_Utils.cpp  SCP_Utils.hpp  Utils.cpp  Utils.hpp
